--- a/src/styles.css
+++ b/src/styles.css
@@ -31,13 +31,13 @@ body {
 
 @layer base {
   section {
-    @apply py-[75px]
+    @apply py-[75px];
   }
 }
 
 @layer components {
   .container {
-    @apply max-w-full w-[1440px] px-5 mx-auto
+    @apply max-w-full w-[1440px] px-5 mx-auto;
   }
 
   .btn {
