modified:   src/app/pages/home/home.component.html

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -83,7 +83,7 @@
 
       <div class="py-[30px] px-5">
         <div class="flex items-center justify-center">
-          <img src="/assets/images/icon02.png" alt="" />
+          <img loading="lazy" src="/assets/images/icon02.png" alt="" />
         </div>
 
         <div class="mt-[30px]">
@@ -110,7 +110,7 @@
 
       <div class="py-[30px] px-5">
         <div class="flex items-center justify-center">
-          <img src="/assets/images/icon03.png" alt="" />
+          <img loading="lazy" src="/assets/images/icon03.png" alt="" />
         </div>
 
         <div class="mt-[30px]">
@@ -183,7 +183,7 @@
       <div
         class="flex relative z-10 xl:w-[770px] justify-end mt-[50px] lg:mt-0"
       >
-        <img src="/assets/images/feature-img.png" class="w-3/4" alt="" />
+        <img loading="lazy" src="/assets/images/feature-img.png" class="w-3/4" alt="" />
 
         <div
           class="w-[150px] lg:w-[248px] bg-white absolute bottom-[50px] left-0 md:bottom-[100px] md:left-5 z-20 p-2 pb-3 lg:pt-4 lg:px-4 lg:pb-[26px] rounded-[10px]"
@@ -202,7 +202,7 @@
               </p>
             </div>
             <span class="w-5 h-5 lg:w-[34px] lg:h-[34px] flex items-center justify-center bg-yellowColor rounded py-1 px-[6px] lg:py-3 lg:px-[9px]">
-              <img src="/assets/images/video-icon.png" alt="">
+              <img loading="lazy" src="/assets/images/video-icon.png" alt="">
             </span>
           </div>
 
@@ -211,7 +211,7 @@
           </div>
 
           <div class="flex items-center gap-[6px] lg:gap-[10px] mt-2 lg:mt-[18px]">
-            <img src="/assets/images/avatar-icon.png" alt="">
+            <img loading="lazy" src="/assets/images/avatar-icon.png" alt="">
             <h4 class="text-[10px] leading-3 lg:text-[16px] lg:leading-[22px] font-[700] text-headingColor">
               Wayne Collins
             </h4>
@@ -241,7 +241,7 @@
   <div class="container">
     <div class="flex justify-between gap-[50px] lg:gap-0">
       <div class="w-1/2 hidden md:block">
-        <img src="/assets/images/faq-img.png" alt="">
+        <img loading="lazy" src="/assets/images/faq-img.png" alt="">
       </div>
 
       <div class="w-full md:w-1/2">
