modified:   src/app/components/header/header.component.html 	modified:   src/app/components/header/header.component.ts 	modified:   src/app/pages/Doctors/doctor-about/doctor-about.component.html 	modified:   src/app/pages/Doctors/doctor-details/doctor-details.component.html 	modified:   src/app/pages/Doctors/doctor-details/doctor-details.component.ts 	modified:   src/assets/data/doctors.ts

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -35,7 +35,7 @@
         </a>
 
         <span class="md:hidden" (click)="toggleMenu()">
-          <i class="fa-solid fa-bars"></i>
+          <i id="menuButton" class="fa-solid fa-bars"></i>
         </span>
       </div>
     </div>
