--- a/src/app/pages/Doctors/doctor-about/doctor-about.component.html
+++ b/src/app/pages/Doctors/doctor-about/doctor-about.component.html
@@ -2,7 +2,7 @@
   <h3 class="text-[20px] leading-[30px] text-headingColor font-semibold flex items-center gap-2">
     About of
     <span class="text-irisBlueColor font-bold text-[24px] leading-9">
-      Louis Adam
+      Selina Adam
     </span>
   </h3>
   <p class="text__para">
