--- a/src/app/pages/Doctors/doctor-details/doctor-details.component.html
+++ b/src/app/pages/Doctors/doctor-details/doctor-details.component.html
@@ -5,7 +5,7 @@
       <div class="md:col-span-2">
         <div class="flex items-center gap-5">
           <figure>
-            <img src="/assets/images/doctor-img02.png" alt="" class="w-full">
+            <img src="/assets/images/doctor-img02.png" alt="" class="w-full h-[40vh]">
           </figure>
 
           <div>
@@ -14,7 +14,7 @@
               Surgeon
             </span>
             <h3 class="text-headingColor text-[22px] leading-9 mt-3 font-bold">
-              Louis Adam
+              Selina Adam
             </h3>
             <div class="flex items-center gap-[6px]">
               <span
